rnsc/test_data/rns_integration/error/parser/type_hints/methodref/no_operand_2_recovers.rns
.class   @methodref MyClass
.unknown ; <- still reported